Fix unvisible background image on Main

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -79,7 +79,7 @@ body {
 }
 
 .main {
-  background-image: url(/img/main/bg.jpg); 
+  background-image: url(../img/main/bg.jpg); 
   position: relative;
   min-height: 100vh;
   // width: auto;
